--- a/styles/style.css
+++ b/styles/style.css
@@ -7,11 +7,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
 
 /* -------------------- LAYOUT -------------------- */
-
+html,
+body {
+  height: auto;
+  min-height: 100%;
+}
 body {
   font-size: 14px;
   font-family: 'SourceSansPro', Arial, sans-serif;
-  width: 360px;
+  max-width: 360px;
   margin-left: 0px;
   margin-top: -50px;
 
@@ -21,23 +25,27 @@ body {
 
   font-family: Helvetica;
   color: white;
+
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-body {
- background-image: url("../images/sunriseBackground_360.png");
- width: 100%;
-}
+/*body {
+ background-image: url("../images/sunriseBackground.jpg");
+ background-repeat: no-repeat;
+ background-size: cover;
+}*/
 
 .header{
   width: 330px;
   height: 120px;
-  margin-left: 15px;
+  margin-left: 20px;
   margin-top: 80px;
 }
 
 img{
   margin-top: 0px;
-  margin-left: 5px;
+  margin-left: 20px;
 }
 
 h1{
@@ -50,9 +58,10 @@ h1{
   font-family: Exo;
 }
 
+/*Klok*/
 #container{
   display: block;
-  position: relative;
+  position: absolute;
   height: 200px;
   width: 200px;
   background-color: white;
@@ -61,8 +70,8 @@ h1{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 80px;
-  margin-top: 40px;
+  left: 100px;
+  top: 250px;
 }
 
 .box{
@@ -94,18 +103,19 @@ h1{
 
   background-color: black;
 }
-
-
+/*Klok*/
 
 /*Tijd in cijfers*/
 #clock {
-  position: absolute;
-  top:50; bottom:0; left:100%; right:0;
+  margin-top: 220px;
+  text-align: center;
+  /*position: absolute;
+  top:50; bottom:0; left:80%; right:0;
   margin:auto;
-  margin-left: -700px;
+  margin-left: -600px;
   width:1000px;
   height:200px;
-  text-align:center;
+  text-align:center;*/
 }
 
 .num {
@@ -151,6 +161,44 @@ h1{
 }
 /*Tijd in cijfers*/
 
+p{
+  font: 20px 'Exo', sans-serif, white;
+  width: 20px;
+}
+
+.datum{
+  width: 250px;
+  height: 70px;
+  margin-top: 0px;
+  margin-left: 60px;
+  background-color: white;
+  color: black;
+}
+
+#date{
+  font: 20px 'Exo', sans-serif;
+}
+
+.flex-containerDatum{
+  display: flex;
+  z-index: 20;
+  padding: 5px;
+}
+
+.flex-itemTitelDatum{
+  flex: wrap;
+}
+
+.flex-itemDate{
+  flex: wrap;
+  margin-left: 100px;
+}
+
+.momentVanDeDag p{
+  width: 400px;
+  text-align: center;
+  margin-top: -40px;
+}
 
 /* -------------------- LAYOUT -------------------- */
 
@@ -161,7 +209,7 @@ h1{
 @media only screen and (min-width: 768px){
 
   body{
-    width: 768px;
+    max-width: 768px;
     font-size: 25px;
     height: auto;
   }
@@ -197,6 +245,21 @@ h1{
     margin-left: 800px;
     font-size: 30px;
     margin-top: -50px;
+  }
+
+  #container{
+    height: 300px;
+    width: 300px;
+    margin-left: -120px;
+    margin-top: 300px;
+  }
+
+  #clock {
+    top:50; bottom:0; left:100%; right:0;
+    margin:auto;
+    margin-left: -1200px;
+    width:1000px;
+    height:200px;
   }
 
 
