--- a/styles/style.css
+++ b/styles/style.css
@@ -30,12 +30,6 @@ body {
   background-size: cover;
 }
 
-/*body {
- background-image: url("../images/sunriseBackground.jpg");
- background-repeat: no-repeat;
- background-size: cover;
-}*/
-
 .header{
   width: 330px;
   height: 120px;
@@ -99,118 +93,12 @@ p{
   margin-left: 100px;
 }
 
-
-/*
-//Klok
-#container{
-  display: block;
-  position: absolute;
-  height: 200px;
-  width: 200px;
-  background-color: white;
-  border-radius: 50%;
-  border-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  left: 100px;
-  top: 250px;
-}
-
-.box{
-  display: block;
-  position: absolute;
-  height: 70px;
-  width: 10px;
-  border-radius: 10px;
-  border-color: black;
-}
-
-.second{
-  height: 90px;
-  width: 2px;
-  opacity: 0.5;
-  background-color: #121232;
-}
-
-.minute{
-  height: 80px;
-  width: 5px;
-
-  background-color: darkgrey;
-}
-
-.hour{
-  height: 70px;
-  width: 10px;
-
-  background-color: black;
-}
-//Klok
-*/
 .pictureMomentOfDay img{
   width: 100px;
   height: 100px;
   margin-left: 100px;
   margin-top: 50px;
 }
-/*
-//Tijd in cijfers
-#clock {
-  margin-top: 220px;
-  text-align: center;
-  /*position: absolute;
-  top:50; bottom:0; left:80%; right:0;
-  margin:auto;
-  margin-left: -600px;
-  width:1000px;
-  height:200px;
-  text-align:center;*//*
-}
-
-.num {
-  position:relative;
-  display:inline-block;
-  width:50px;
-  height:120px;
-  font: 60px 'Exo', sans-serif;
-  color: black;
-}
-
-.colon {
-  position:relative;
-  display:inline-block;
-  font: 60px 'Exo', sans-serif;
-  top:-70px;
-  left:-2px;
-  color: black;
-}
-
-.base span {
-  position:absolute;
-  display:block;
-  width:100%;
-}
-
-.upper {
-  position:absolute;
-  width:100%;
-  height:50%;
-}
-
-.lower {
-  position:absolute;
-  top:50%;
-  width:100%;
-  height:50%;
-}
-
-.lower span {
-  position:relative;
-  top:-100%;
-}
-*/
-/*Tijd in cijfers*/
 
 .clock{
   color: black;
@@ -249,6 +137,40 @@ p{
     margin-left: -20px;
   }
 
+  #info{
+    width: 500px;
+    height: 700px;
+    margin-left: 150px;
+    margin-top: 20px;
+  }
+
+  .datum{
+    margin-left: 120px;
+    margin-top: 50px;
+  }
+
+  .pictureMomentOfDay img{
+    width: 150px;
+    height: 150px;
+    margin-left: 170px;
+    margin-top: 80px;
+  }
+
+  .clock{
+    color: black;
+    font-family: 'Exo', sans-serif;
+    font-size: 30px;
+    margin-left: 180px;
+    margin-top: 80px;
+  }
+
+  .momentVanDeDag p{
+    width: 400px;
+    margin-top: 80px;
+    margin-left: 50px;
+  }
+
+
 
 /*Breakpoint naar laptop*/
 @media only screen and (min-width: 1366px){
@@ -263,7 +185,6 @@ p{
     grid-gap: 20px;
   }
 
-
   .logo{
     margin-left: -230px;
   }
@@ -274,19 +195,43 @@ p{
     margin-top: -50px;
   }
 
-  #container{
-    height: 300px;
-    width: 300px;
-    margin-left: -120px;
-    margin-top: 300px;
+  #info{
+    width: 800px;
+    height: 400px;
+    margin-left: -300px;
+    margin-top: 250px;
   }
 
-  #clock {
-    top:50; bottom:0; left:100%; right:0;
-    margin:auto;
-    margin-left: -1200px;
-    width:1000px;
-    height:200px;
+  .flex-containerInfo{
+    display: flex;
+  }
+
+  .box1{
+    grid-column: 1/2;
+    grid-row: 2;
+    width: 400px;
+    margin-left: 40px;
+  }
+
+  .box2{
+    grid-column: 2/2;
+    grid-row: 3;
+    margin-left: -100px;
+    margin-top: 50px;
+  }
+
+  .box3{
+    grid-column: 1/2;
+    grid-row: 4;
+    margin-left: -620px;
+    margin-top: 200px;
+  }
+
+  .box4{
+    grid-column: 1/2;
+    grid-row: 6;
+    margin-top: 220px;
+    margin-left: -180px;
   }
 
 
