--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,7 @@ p{
 }
 
 .clock{
-  color: black;
+  color: white;
   font-family: 'Exo', sans-serif;
   font-size: 30px;
   margin-left: 90px;
@@ -157,7 +157,7 @@ p{
   }
 
   .clock{
-    color: black;
+    color: white;
     font-family: 'Exo', sans-serif;
     font-size: 30px;
     margin-left: 180px;
